Fixed YAML again

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,32 +37,6 @@ jobs:
           --cov-report=term-missing
       continue-on-error: true
 
-    - name: Debug environment and run pytest
-      env:
-        PYTHONPATH: ${{ github.workspace }}/src:${{ env.PYTHONPATH }}
-      run: |
-        echo "Current directory: $(pwd)"
-        echo "Files in current directory:"
-        ls -la
-        echo "Python path:"
-        python -c "import sys; print('\n'.join(sys.path))"
-        echo "Testing data loader function:"
-        python -c "
-        import sys, os
-        sys.path.insert(0, 'src')
-        from data_loader import load_iris_dataset
-        df = load_iris_dataset()
-        print(f'DataFrame type: {type(df)}')
-        print(f'DataFrame shape: {df.shape if df is not None else None}')
-        print(f'DataFrame columns: {list(df.columns) if df is not None else None}')
-        "
-
-        pytest tests/ -v \
-          --junitxml=pytest-report.xml \
-          --cov=src \
-          --cov-report=xml \
-          --cov-report=term-missing
-
     - name: Publish test results
       uses: dorny/test-reporter@v2
       if: always()
@@ -91,7 +65,7 @@ jobs:
             df = load_iris_dataset()
             processed_df, scaler = preprocess_iris_data(df)
 
-            feature_cols = ['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']
+            feature_cols = ['sepal_length', 'sepal_width', 'petal_length', 'petal_width']
             X = processed_df[feature_cols]
             y = processed_df['target']
 
